# template_library

./: .clang-format  .gitignore  CMakeLists.txt  setup.cmake
.github/workflows/: build_and_test.yml
cmake/: deps.cmake
src/: common.cpp
test/: CMakeLists.txt  test_foo.cpp
